--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 
 <p>tracker.mywaifu.best is a public tracker for the BitTorrent protocol, over HTTP.</p>
 <p>The official announce address is: http://tracker.mywaifu.best:6969/announce</p>
-<p>The tracker is based on <a href="https://github.com/ckcr4lyf/kouko/">Kouko, an open source project.</a></p>
+<s><p>The tracker is based on <a href="https://github.com/ckcr4lyf/kouko/">Kouko, an open source project.</a></p></s>
+<p>The tracker is based on <a href="https://github.com/ckcr4lyf/kiryuu/">Kiryuu, an open source project</a> that I wrote in Rust</p>
 <p>To support this tracker and cover operational costs, you may donate at any of the addresses below</p>
 <div class="container donate">
     <span class="ds">Donate</span>
