Serve Waifu from CFR2

--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,4 @@
         </li>
     </ul>
 </div>
-<img src="/favicon.png" alt="mywaifu.best">
+<img src="https://uwu.mywaifu.best/calli.png" alt="mywaifu.best">
