Update BTC address

--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,8 @@
 <div class="container donate">
     <span class="ds">Donate</span>
     <ul style="list-style-type:none;" class="dsl">
-        <li>BTC: 3FvjVvSaihUvLHzatJ4MAvrKdtZQEbJhS1</li>
-        <li>ETH: 0x865fEC58a2d98f44d7253A1d5cE18b40fb124462</li>
-        <li>BCH: qqgvak0004cj9g9p2fqcz0s8q8384s8mecq88swgpe</li>
-        <li>ZEC: t1K9grYE1ZkQF9ftmowo3ejJZadpxKg9zn9</li>
-        <li>XMR: 45W6pWE6Euu7VvcDmbvyiMJCEASA3BTXc8JepTcvXEkeWPHnfr5pL1uNLhfZL1c3KoWPrwqgri7YnM7y3ckxdTU91bNEDbb
-        </li>
+        <li>BTC: bc1qzf939fdw37umsa3kxzrh3s20vm5ym6axxkzuht</li>
+        <li>XMR: 45W6pWE6Euu7VvcDmbvyiMJCEASA3BTXc8JepTcvXEkeWPHnfr5pL1uNLhfZL1c3KoWPrwqgri7YnM7y3ckxdTU91bNEDbb</li>
     </ul>
 </div>
 <img src="https://uwu.mywaifu.best/calli.png" alt="mywaifu.best">
