--- a/public/index.html
+++ b/public/index.html
@@ -12,4 +12,10 @@
         <li>XMR: 45oHa9qj1vT2q8x6jW9chNifa7Gp6asJR1S2qn64xENfHnU163s1TKFhPyyVPZo3jgJf9eRFkwX2tiLEbp7qf5F313BNAYG</li>
     </ul>
 </div>
+
+<div>
+    <p><b>Abuse</b></p>
+    <p>This website does not host any copyright infringing content. That said, if you believe you have found something in violation, please send an E-Mail to mywaifuabuse [at] saxrag.com</p>
+    <p>The report should clearly identify the URLs at which the content is accessible, a SHA-256 hash of the infringing content, and details about the copyright owner.</p>
+</div>
 <img src="https://uwu.mywaifu.best/calli.png" alt="mywaifu.best">
